<resources>
    <string name="app_name">Calcurator</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_zero">0</string>
    <string name="button_dp">.</string>
    <string name="button_equal">=</string>
    <string name="button_delete">DEL</string>
    <string name="button_cancel">C</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">×</string>
    <string name="button_division">÷</string>
    <string name="button_surplus">%</string>
    <string name="text_calc"></string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <string name="button_back_main">メイン画面</string>
    <string name="show_past_calc">過去の詳細</string>
    <string name="past_calc_button">BEF</string>
    <string name="past_calc_text">NONE</string>
</resources>