<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/past_calc_button"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/past_calc_button"
        app:layout_constraintBottom_toTopOf="@+id/text_calc"
        app:layout_constraintEnd_toStartOf="@+id/past_calc_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/past_calc_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|left"
        android:singleLine="false"
        android:text="@string/past_calc_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/past_calc_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="aaaaaaaaaa" />

    <TextView
        android:id="@+id/text_calc"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:singleLine="false"
        android:text="@string/text_calc"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/past_calc_button"
        tools:text="00000000000000000000000000000000000000000" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="352dp"
        android:layout_height="0dp"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_calc"
        app:rowCount="6">

        <Button
            android:id="@+id/button_one"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_one"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_two"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_two"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_three"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_three"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_four"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_four"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_five"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_five"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_six"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_six"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_seven"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_seven"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button_eight"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_eight"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button_nine"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_nine"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/button_delete"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_delete"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/button_chancel"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_cancel"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/button_plus"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_plus"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/button_zero"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_zero"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button_dp"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_dp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/button_equal"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_equal"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/button_minus"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_minus"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/button_multiply"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_multiply"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_division"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_division"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_surplus"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/button_surplus"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/left_parenthesis"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/left_parenthesis"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/right_parenthesis"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="60dp"
            android:text="@string/right_parenthesis"
            app:layout_column="3"
            app:layout_row="5" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>